--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="top" class="header">
   <div class="text-vertical-center">
     <h1>안녕하세요!</h1>
-    <h3>정수간 블로그 </h3>
+    <h3>정수간 블로그 샘플입니다</h3>
     <br>
     <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
   </div>
