--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,6 @@
     <h1>안녕하세요!</h1>
     <h3>정수간 블로그 샘플입니다</h3>
     <br>
-    <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+    <a href="#about" class="btn btn-dark btn-lg">아래로 내려가는 샘플</a>
   </div>
 </header>
